--- a/style/base.css
+++ b/style/base.css
@@ -3,26 +3,42 @@ ul {
   margin-left:2px;
   padding-left: 2px;
   max-width:100%;
+  padding:15px;
+  /*border: solid black 1px;*/
 }
 
 li {
   padding:10px 40px;
   margin-bottom:3px;
   list-style-type: none;
-  border:solid black 1px;
+  /*border:solid black 1px;*/
   border-radius: 4px;
 }
 
 .main-wrap {
   max-width: 80%;
   padding-left: 10%;
+  padding-top:20px;
+  padding-bottom:20px;
 }
 
 body {
-  border:solid black;
+  min-height:400px;
+
+  -webkit-box-shadow: inset 0px 0px 5px 0px rgba(0,0,0,0.49);
+  -moz-box-shadow: inset 0px 0px 5px 0px rgba(0,0,0,0.49);
+  box-shadow: inset 0px 0px 5px 0px rgba(0,0,0,0.49);
 }
 
 header {
-  border-bottom: solid black;
+  height:70px;
   margin-bottom: 10px;
+}
+
+button {
+  background-color:white;
+  border:none;
+  border-radius:5px;
+  height:35px;
+  min-width:23%;
 }
