--- a/style/module.css
+++ b/style/module.css
@@ -8,6 +8,11 @@
   min-width:70%;
 }
 
+#add-list {
+  display:block;
+  width:100%;
+}
+
 .to-remove {
   background-color: #baddad;
 }
@@ -35,6 +40,7 @@ nav ul {
   margin-bottom:5px;
   margin-top:0px;
   padding-bottom:2px;
+  display:flex;
 }
 
 .nav-li {
@@ -47,10 +53,6 @@ nav ul {
 }
 
 .dropshadow{
-/*-webkit-box-shadow: -1px 3px 7px -2px rgba(0,0,0,0.75);
--moz-box-shadow: -1px 3px 7px -2px rgba(0,0,0,0.75);
-box-shadow: -1px 3px 7px -2px rgba(0,0,0,0.75);*/
-
 -webkit-box-shadow: inset 0px 0px 5px 0px rgba(0,0,0,0.49);
 -moz-box-shadow: inset 0px 0px 5px 0px rgba(0,0,0,0.49);
 box-shadow: inset 0px 0px 5px 0px rgba(0,0,0,0.49);
